Media queries complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="clearfix">
       <h1 id="home">Rusty Shackleford</h1>
-      <nav>
+      <nav class="clearfix">
         <ul>
           <li><a href="#home">HOME</a></li>
           <li><a href="#portfolio">PORTFOLIO</a></li>
@@ -30,35 +30,37 @@
 
     <main class="main clearfix">
       <h2 id="portfolio">PORTFOLIO</h2>
-        <div class="project">
-          <img src="images/portfolio-1.png" alt="Front page of a marketing website">
-          <h3>Marketing Page</h3>
-          <p>This project shows the front page of a marketing website meant for a speciic business I'm interested in.</p>
-        </div>
-        <div class="project">
-          <img src="images/portfolio-2.png" alt="Front page of a marketing website">
-          <h3>Search Page</h3>
-          <p>This project searches through a speciic database to find information that the user is trying to look up.</p>
-        </div>
-        <div class="project">
-          <img src="images/portfolio-3.png" alt="Front page of a marketing website">
-          <h3>Travel App</h3>
-          <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-        </div>
-        <div class="project">
-          <img src="images/portfolio-4.png" alt="Front page of a marketing website">
-          <h3>Map of Favorite Spots</h3>
-          <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
-        </div>
-        <div class="project">
-          <img src="images/portfolio-5.png" alt="Front page of a marketing website">
-          <h3>Photo Gallery</h3>
-          <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-        </div>
-        <div class="project">
-          <img src="images/portfolio-6.png" alt="Front page of a marketing website">
-          <h3>Calculator</h3>
-          <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+        <div class="twocolumn">
+          <div class="project">
+            <img src="images/portfolio-1.png" alt="Front page of a marketing website">
+            <h3>Marketing Page</h3>
+            <p>This project shows the front page of a marketing website meant for a speciic business I'm interested in.</p>
+          </div>
+          <div class="project">
+            <img src="images/portfolio-2.png" alt="Front page of a marketing website">
+            <h3>Search Page</h3>
+            <p>This project searches through a speciic database to find information that the user is trying to look up.</p>
+          </div>
+          <div class="project">
+            <img src="images/portfolio-3.png" alt="Front page of a marketing website">
+            <h3>Travel App</h3>
+            <p>This project compares travel times based on different transportation methods and tells you the best one.</p>
+          </div>
+          <div class="project">
+            <img src="images/portfolio-4.png" alt="Front page of a marketing website">
+            <h3>Map of Favorite Spots</h3>
+            <p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
+          </div>
+          <div class="project">
+            <img src="images/portfolio-5.png" alt="Front page of a marketing website">
+            <h3>Photo Gallery</h3>
+            <p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
+          </div>
+          <div class="project">
+            <img src="images/portfolio-6.png" alt="Front page of a marketing website">
+            <h3>Calculator</h3>
+            <p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
+          </div>
         </div>
     </main>
 
